@@ -1,3 +1,8 @@
+Tue Apr 18 15:49:00 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* Makefile.am (SUBDIRS): Add directory example.
+	* Makefile.in: Re-generate.
+
 2000-04-10  Tom Tromey  <tromey@cygnus.com>
 
 	* lib/target.exp (default_target_compile): Put sources before
